syntax = "proto3";

package auth;

service AuthManager {
	rpc Echo(EchoRequest) returns (EchoReply);
	rpc Authorize (AuthorizeRequest) returns (AuthorizeReply);
	rpc Login (LoginRequest) returns (LoginReply);
	rpc FindUserById (FindUserByIdRequest) returns (FindUserByIdReply);
	rpc SearchUser (SearchUserRequest) returns (SearchUserReply);
	rpc SaveUser (SaveUserRequest) returns (SaveUserReply);
	rpc ChangeUserPassword (ChangeUserPasswordRequest) returns (ChangeUserPasswordReply);
	rpc UpdateUser (UpdateUserRequest) returns (UpdateUserReply);
	rpc DeleteUser (DeleteUserRequest) returns (DeleteUserReply);
}

message EchoRequest {
	string message = 1;
}

message EchoReply {
	string message = 1;
}

message AuthorizeRequest {
	// Check token in metadata
}

message AuthorizeReply {
	bool is_valid = 1;
	User user = 2;
}

message LoginRequest {
	string username = 1;
	string password = 2;
	string email_address = 3;
}

message LoginReply {
	string token = 1;
	User user = 2;
}

message FindUserByIdRequest {
	int32 id = 1;
}

message FindUserByIdReply {
	User user = 1;
}

message SearchUserRequest {
	int32 limit = 1;
	repeated SearchTerm terms = 2;
}

message SearchUserReply {
	repeated User user = 1;
}

message SearchTerm {
	string field = 1;
	string value = 2;
	string operator = 3;
}

message SaveUserRequest {
	User user = 1;
}

message SaveUserReply {
	string token = 1;
	User user = 2;
}

message ChangeUserPasswordRequest {
	string new_password = 1;
	User user = 2;
}

message ChangeUserPasswordReply {
	string token = 1;
	User user = 2;
}

message UpdateUserRequest {
	int32 id = 1;
	User user = 2;
}

message UpdateUserReply {
	User user = 1;
}

message DeleteUserRequest {
	int32 id = 1;
	User user = 2;
}

message DeleteUserReply {
	User user = 1;
}

message User {
	int32 id = 1;
	string first_name = 2;
	string last_name = 3;
	string username = 4;
	string password = 5;
	string email_address = 6;
	bool enabled = 7;
	string last_logged_in_at = 8;
}
